crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task__dependents__expands_skipped_dependents_when_task_is_revisited_in_scope.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps)"]
    2 [ label="RunTask(deps:parent1)"]
    3 [ label="RunTask(deps:base)"]
    4 [ label="SyncProject(deps-external)"]
    5 [ label="RunTask(deps-external:external)"]
    6 [ label="RunTask(deps:parent2)"]
    1 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="required"]
    4 -> 0 [ label="required"]
    4 -> 1 [ label="required"]
    5 -> 4 [ label="required"]
    5 -> 3 [ label="required"]
    6 -> 1 [ label="required"]
    6 -> 3 [ label="required"]
}
